[package]
name = "quicc_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_terrain = { git = "https://github.com/kurtkuehnert/bevy_terrain.git" }
bevy_quinnet = "0.5.0"
serde = "1.0.190"
