[package]
name = "quicc_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"


[dependencies]
bevy = "0.11.3"
bevy_quinnet = "0.5.0"
serde = "1.0.190"
